# esp32-p4-decompiler-plugin

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  build.gradle  extension.properties  settings.gradle
data/languages/: esp32p4.cspec  esp32p4.ldefs  esp32p4.sla  esp32p4.slaspec  esp32p4_hwlp.sinc  esp32p4_pie.sinc  esp32p4_qreg.sinc  riscv.reg.sinc
ghidra_scripts/: AnalyzeESP32P4Headless.py  ApplyESP32P4FIDB.java  ApplySemanticHints.java  ApplyTypePromotion.java  DetectSemanticPatterns.java  ESP32P4HWLPContextAnalyzer.java  ExportCallGraph.java  ExportDecompiledC.java  ExportFirmwareHeader.java  ExportGlobalDecls.java  ExtractFreeRTOSTasks.java  GenerateESP32P4FIDB.java  IdentifyReturnVariable.java  InspectClangAST.java  LoadESP32P4RomSymbols.java  LoadESP32P4SVD.java  LoadFreeRTOSTypes.java
samples/: README.md
samples/hello_world/: README.md
test/: ci_smoke.sh
test/hil/: CMakeLists.txt  conftest.py  pytest.ini  requirements.txt  test_roundtrip_hil.py  unity_test_runner.c
test/idf_examples/: .gitignore  README.md
test/roundtrip/: README.md  run_roundtrip.sh  test_2d_fenwick.c  test_2sat.c  test_a_star_search.c  test_abundant_numbers.c  test_achilles_numbers.c  test_activity_sel.c  test_activity_selection.c  test_additive_primes.c  test_aho_corasick.c  test_aho_corasick.elf  test_aho_corasick_dp.c  test_aliens_trick.c  test_aliquot_sequence.c  test_amicable_numbers.c  test_anagram_groups.c  (+527 more)
tools/: RunFullPipeline.sh  build_fidb.sh  create_minimal_idf_fixture.sh  esp32p4-idf6.fidb  ghidra_types.h
tools/idf_stub/main/: CMakeLists.txt  main.c
(+34 files in other folders)
