idf_component_register(
    SRCS "main.c"
    REQUIRES
        esp_hw_support
        esp_system
        esp_timer
        freertos
        heap
        log
        nvs_flash
        vfs
        esp_partition
        efuse
        spi_flash
        esp_rom
        mbedtls
        esp_driver_gpio
        esp_driver_uart
        esp_driver_i2c
        esp_driver_spi
)
